objects/PEPE_Learning_Partner__c.object
<CustomObject>
    <fields>
        <fullName>ACTUAL_COST_DIFF__c</fullName>
        <description>Difference between Actual Cost of Learning Partner vs TRaining request Object</description>
        <formula>if(Training_Request_Id__r.Actual_Costs__c = Actual_Cost__c, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACTUAL COST DIFF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Cost__c</fullName>
        <description>Actual Cost = Learning Partner Cost + Catering and Vendor Cost + VAT</description>
        <formula>Learning_Partner_Cost__c +  Catering_and_Vendor_Cost__c + VAT__c + DW_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Actual Cost = Learning Partner Cost + Catering and Vendor Cost + VAT</inlineHelpText>
        <label>Actual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <description>This field provides the Actual Start Date.</description>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Alternate_Language__c</fullName>
        <description>This will contain the Alternate Language.</description>
        <label>Alternate Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovene</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alternative_Start_Date__c</fullName>
        <description>This data will be copied to Status Comments of Training Request.</description>
        <label>Alternative Start Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Suggested_Date__c</fullName>
        <description>This data will be copied to Status Comments of Training Request.</description>
        <label>Alternative Suggested Date</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Created_By__c</fullName>
        <label>BLP Created By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Created_On__c</fullName>
        <label>BLP Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BLP_Last_Modified_By__c</fullName>
        <label>BLP Last Modified By</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLP_Modified_On__c</fullName>
        <label>BLP Modified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSAT_Scores__c</fullName>
        <description>This provides the CSAT Score.</description>
        <label>CSAT Scores</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Catering_and_Vendor_Cost__c</fullName>
        <description>This field will provide the Catering and Vendor Cost.</description>
        <label>Catering and Vendor Cost</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>LP Comments are added here</description>
        <label>Comments</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DW_Cost__c</fullName>
        <label>DW Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered_by_Local_Learning_Partner__c</fullName>
        <description>This field will provide the addition information regarding the Delivery by Local Learning Partner. (Yes/ No)</description>
        <label>Delivered by Local Learning Partner</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_in_Preferred_Language__c</fullName>
        <description>This will allow user to provide option in case he wants Delivery in Preferred Language.</description>
        <label>Delivery in Preferred Language?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <description>This field will provide the Estimated Cost for the Training Request.</description>
        <label>Estimated Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Start_Date__c</fullName>
        <formula>Training_Request_Id__r.Actual_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Instructor_Contact_Details__c</fullName>
        <description>This provides the Instructor Contact Detail(s) for the given Learning Partner Record.</description>
        <label>Instructor Contact Detail(s)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructor_Email__c</fullName>
        <description>Instructor Email is captured by Learning Partners</description>
        <label>Instructor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Instructor_Name__c</fullName>
        <description>Instructor Name for given Learning Partner Record.</description>
        <label>Instructor Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Number__c</fullName>
        <description>P+ new fields for July release 18</description>
        <label>Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Value__c</fullName>
        <description>P+ new fields for July release 18</description>
        <label>Invoice Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Launguage__c</fullName>
        <description>This will provide the Primary Language.</description>
        <label>Launguage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Austrian</fullName>
                </value>
                <value>
                    <fullName>Bosnian</fullName>
                </value>
                <value>
                    <fullName>Bulgarian</fullName>
                </value>
                <value>
                    <fullName>Croatian</fullName>
                </value>
                <value>
                    <fullName>Czech</fullName>
                </value>
                <value>
                    <fullName>Danish</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Estonian</fullName>
                </value>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Flemish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Hebrew</fullName>
                </value>
                <value>
                    <fullName>Hungarian</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Latvian</fullName>
                </value>
                <value>
                    <fullName>Lithuanian</fullName>
                </value>
                <value>
                    <fullName>Norwegean</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Romanian</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Slovene</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Partner_Cost__c</fullName>
        <description>This field will provide the Cost of the Learning partner.</description>
        <label>Learning Partner Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Learning_Partner_Country__c</fullName>
        <description>Country for given Learning partner</description>
        <label>Learning Partner Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
                <value>
                    <fullName>Comoros</fullName>
                </value>
                <value>
                    <fullName>Congo, D.R.</fullName>
                </value>
                <value>
                    <fullName>Congo (Brazzaville)</fullName>
                </value>
                <value>
                    <fullName>Cote d'Ivoire</fullName>
                </value>
                <value>
                    <fullName>Croatia</fullName>
                </value>
                <value>
                    <fullName>Cyprus</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Djibouti</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Learning_Partner_Name__c</fullName>
        <description>This field will provide the Name of Learning Partner.</description>
        <label>Learning Partner Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>2 Mark-IT</fullName>
                </value>
                <value>
                    <fullName>4sight</fullName>
                </value>
                <value>
                    <fullName>5i</fullName>
                </value>
                <value>
                    <fullName>Alef</fullName>
                </value>
                <value>
                    <fullName>AlefNula</fullName>
                </value>
                <value>
                    <fullName>ALS</fullName>
                </value>
                <value>
                    <fullName>Areon</fullName>
                </value>
                <value>
                    <fullName>Bitnett</fullName>
                </value>
                <value>
                    <fullName>Business Technical Architects</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>Cisco AM</fullName>
                </value>
                <value>
                    <fullName>Cluster Learning</fullName>
                </value>
                <value>
                    <fullName>Edinburgh Business School</fullName>
                </value>
                <value>
                    <fullName>Engage ESM</fullName>
                </value>
                <value>
                    <fullName>EURO RSCG</fullName>
                </value>
                <value>
                    <fullName>Experteach</fullName>
                </value>
                <value>
                    <fullName>Fastlane</fullName>
                </value>
                <value>
                    <fullName>Fast Lane Dubai</fullName>
                </value>
                <value>
                    <fullName>Firefly</fullName>
                </value>
                <value>
                    <fullName>Firefly/UpDate</fullName>
                </value>
                <value>
                    <fullName>ForTeam Consult</fullName>
                </value>
                <value>
                    <fullName>Global Knowledge</fullName>
                </value>
                <value>
                    <fullName>Inkom/Knowledge Centre</fullName>
                </value>
                <value>
                    <fullName>Innovise</fullName>
                </value>
                <value>
                    <fullName>Institut za menadzment</fullName>
                </value>
                <value>
                    <fullName>Intuition</fullName>
                </value>
                <value>
                    <fullName>ITLS</fullName>
                </value>
                <value>
                    <fullName>J5</fullName>
                </value>
                <value>
                    <fullName>Knowledge Center Incom/Areon</fullName>
                </value>
                <value>
                    <fullName>Mamentor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Local_Learning_Partner_Name__c</fullName>
        <description>This field will provide the Name of Local Learning Partner.</description>
        <label>Local Learning Partner Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number Of Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Partner_Companies_Attended__c</fullName>
        <description>The number of Partner companies from which the attendees represented</description>
        <label>Number of Partner Companies Attended</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Registrants__c</fullName>
        <description>Number of people who registered for the event.</description>
        <label>Number of Registrants</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Updates__c</fullName>
        <description>This field will provide the other updates for a given LP record.</description>
        <label>Other Updates</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PLP_Email_Alias__c</fullName>
        <description>The PLP Email Alias</description>
        <label>PLP Email Alias</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Participant_Type_s__c</fullName>
        <label>Participant Type(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>SE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Language__c</fullName>
        <description>This field contains Language selected from parent Training Request.</description>
        <formula>TEXT(Training_Request_Id__r.Language__c)</formula>
        <label>Preferred Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUOTE_ACCEPTED_FLAG__c</fullName>
        <defaultValue>'N'</defaultValue>
        <description>When Quote Accepted - this flag will become "Y"</description>
        <label>QUOTE_ACCEPTED_FLAG</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recommendations__c</fullName>
        <description>This field provides the Recommendations in case any.</description>
        <label>Recommendations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks_Feedback__c</fullName>
        <description>This field provides the Additional Remarks or Feedback.</description>
        <label>Remarks/Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remarks_and_Feedback__c</fullName>
        <description>This will contain the Remarks and feedback.</description>
        <label>Remarks and Feedback</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Repository_Link__c</fullName>
        <description>This field will provide the Repository Link for a given LP record.</description>
        <label>Repository Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This will indicate the status of the record.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LP being contacted</fullName>
                    <default>true</default>
                    <label>LP being contacted</label>
                </value>
                <value>
                    <fullName>Revised Details Requested</fullName>
                </value>
                <value>
                    <fullName>Confirmed by LP</fullName>
                </value>
                <value>
                    <fullName>Quote Accepted</fullName>
                </value>
                <value>
                    <fullName>Quote Rejected</fullName>
                </value>
                <value>
                    <fullName>Event Approved</fullName>
                </value>
                <value>
                    <fullName>Logistics Confirmed</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suggested_Date__c</fullName>
        <description>This field provides the Actual Start Date.</description>
        <label>Suggested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Event_Name__c</fullName>
        <description>This will provide the name of the Training Event linked with LP via LP.</description>
        <formula>Training_Request_Id__r.Training_Event_Name__c</formula>
        <label>Training Event Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Request_Id__c</fullName>
        <description>This lookup will link the Learning Partner Record with a given Training Request.</description>
        <label>Training Request Id</label>
        <referenceTo>PEPE_Training_Request__c</referenceTo>
        <relationshipLabel>Learning Partners</relationshipLabel>
        <relationshipName>Learning_Partner</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <description>This field will provide the VAT Cost.</description>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <description>This object holds the Learning Partner Information. This information can be entered y Admin from the external portal.</description>
    <label>Learning Partner</label>
    <nameField>
        <displayFormat>LP-{0000000000}</displayFormat>
        <label>LP Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Partners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Admin_cant_edit_or_change_status_for_few</fullName>
        <active>false</active>
        <description>Admin cannot change LP statuses to other than "LP being contacted",  "Confirmed by LP", "Quote Accepted", "Quote Rejected" and  "Revised Details Requested".</description>
        <errorConditionFormula>ISPICKVAL( $User.PDP_User_Role__c , 'Admin') &amp;&amp;
NOT(ISPICKVAL(Status__c, 'Quote Accepted')||
ISPICKVAL(Status__c, 'Confirmed by LP')||
ISPICKVAL(Status__c, 'Quote Rejected')||
ISPICKVAL(Status__c, 'LP being contacted')||
ISPICKVAL(Status__c, 'Revised Details Requested'))</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Admin cannot change LP statuses to other than "LP being contacted",  "Confirmed by LP", "Quote Accepted", "Quote Rejected" and  "Revised Details Requested".</errorMessage>
    </validationRules>
</CustomObject>